# gpru

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
examples/azure/preview_2022_03_01/: cancel_fine_tune.py  create_completion.py  create_completion_stream.py  create_deployment.py  create_fine_tune.py  delete_deployment.py  delete_file.py  delete_fine_tune.py  download_file.py  get_deployment.py  get_file.py  get_fine_tune.py  get_model.py  import_file.py  list_deployments.py  list_files.py  list_fine_tune_events.py  list_fine_tune_events_stream.py  list_fine_tunes.py  list_models.py  update_deployment.py  upload_file.py
examples/azure/preview_2022_06_01/: cancel_fine_tune.py  create_completion.py  create_completion_stream.py  create_deployment.py  create_embedding.py  create_fine_tune.py  delete_deployment.py  delete_file.py  delete_fine_tune.py  download_file.py  get_deployment.py  get_file.py  get_fine_tune.py  get_model.py  import_file.py  list_deployments.py  list_files.py  list_fine_tune_events.py  list_fine_tune_events_stream.py  list_fine_tunes.py  list_models.py  update_deployment.py  upload_file.py
examples/azure/preview_2023_03_15/: cancel_fine_tune.py  create_chat_completion.py  create_chat_completion_stream.py  create_completion.py  create_completion_stream.py  create_deployment.py  create_embedding.py  create_fine_tune.py  delete_deployment.py  delete_file.py  delete_fine_tune.py  download_file.py  get_deployment.py  get_file.py  get_fine_tune.py  get_model.py  import_file.py  list_deployments.py  list_files.py  list_fine_tune_events.py  list_fine_tune_events_stream.py  list_fine_tunes.py  list_models.py  update_deployment.py  upload_file.py
examples/azure/preview_2023_06_01/: cancel_fine_tune.py  create_chat_completion.py  create_chat_completion_stream.py  create_completion.py  create_completion_stream.py  create_embedding.py  create_extension_chat_completion.py  create_extension_chat_completion_stream.py  create_fine_tune.py  create_images.py  delete_file.py  delete_fine_tune.py  delete_image_operation.py  download_file.py  generate_images.py  get_file.py  get_fine_tune.py  get_image_operation.py  get_model.py  import_file.py  list_files.py  list_fine_tune_events.py  list_fine_tune_events_stream.py  list_fine_tunes.py  list_models.py  upload_file.py
examples/azure/stable_2022_12_01/: cancel_fine_tune.py  create_completion.py  create_completion_stream.py  create_deployment.py  create_embedding.py  create_fine_tune.py  delete_deployment.py  delete_file.py  delete_fine_tune.py  download_file.py  get_deployment.py  get_file.py  get_fine_tune.py  get_model.py  import_file.py  list_deployments.py  list_files.py  list_fine_tune_events.py  list_fine_tune_events_stream.py  list_fine_tunes.py  list_models.py  update_deployment.py  upload_file.py
examples/azure/stable_2023_05_15/: cancel_fine_tune.py  create_chat_completion.py  create_chat_completion_stream.py  create_completion.py  create_completion_stream.py  create_embedding.py  create_fine_tune.py  delete_file.py  delete_fine_tune.py  download_file.py  get_file.py  get_fine_tune.py  get_model.py  import_file.py  list_files.py  list_fine_tune_events.py  list_fine_tune_events_stream.py  list_fine_tunes.py  list_models.py  upload_file.py
examples/openai/: cancel_fine_tune.py  create_chat_completion.py  create_chat_completion_function_call.py  create_chat_completion_stream.py  create_completion.py  create_completion_stream.py  create_edit.py  create_embedding.py  create_fine_tune.py  create_image_variation.py  create_images.py  create_moderation.py  delete_file.py  delete_model.py  download_file.py  edit_image.py  get_file.py  get_fine_tune.py  get_model.py  list_files.py  list_fine_tune_events.py  list_fine_tune_events_stream.py  list_fine_tunes.py  list_models.py  transcribe_audio.py  translate_audio.py  upload_file.py
src/gpru/: __init__.py  _client.py  _logger.py  exceptions.py
src/gpru/azure/: _api.py  _utils.py  preview_2022_03_01.py  preview_2022_06_01.py  preview_2023_03_15.py  preview_2023_06_01.py  stable_2022_12_01.py  stable_2023_05_15.py
src/gpru/openai/: api.py
tests/: conftest.py
tests/azure/: test_preview_2022_03_01.py  test_preview_2022_06_01.py  test_preview_2023_03_15.py  test_preview_2023_06_01.py  test_stable_2022_12_01.py  test_stable_2023_05_15.py
tests/data/: fine-tune.jsonl
tests/openai/: test_api.py
